# AlphaAvatar

./: .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOY.md  Makefile  Makefile.bak  README.md  ROADMAP.md  pyproject.toml
avatar-agents/: pyproject.toml
avatar-agents/alphaavatar/agents/: __init__.py  constants.py  env.py  log.py  plugin.py
avatar-agents/alphaavatar/agents/avatar/: __init__.py  avatar_hooks.py  chat_context_observer.py  engine.py  wrapper.py
avatar-agents/alphaavatar/agents/avatar/character/: __init__.py  base.py
avatar-agents/alphaavatar/agents/avatar/context/: __init__.py  context_manager.py  internal_tools.py  prompt_assembler.py  runtime_context.py  template.py  user_input_context.py
avatar-agents/alphaavatar/agents/avatar/context/prompts/: avatar_system_prompts.py
avatar-agents/alphaavatar/agents/avatar/patches/: __init__.py  context_search_patch.py  worker_patch.py
avatar-agents/alphaavatar/agents/avatar/prompting/: __init__.py  assembler.py  template.py
avatar-agents/alphaavatar/agents/avatar/prompting/enum/: injection_mode.py
avatar-agents/alphaavatar/agents/avatar/prompting/prompts/: runtime_context_prompts.py
avatar-agents/alphaavatar/agents/avatar/vision/: __init__.py  base.py  constants.py  realtime.py  sampled_frame.py
avatar-agents/alphaavatar/agents/channels/: detector.py  factory.py  registry.py  room_type.py
avatar-agents/alphaavatar/agents/configs/: __init__.py  avatar_config.py  avatar_info_config.py  avatar_plugin_args.py  avatar_plugin_config.py  livekit_plugin_config.py  memory_plugin_config.py  parser.py  persona_plugin_config.py  plugin_config.py  prompt_config.py  runtime_config.py  session_config.py
avatar-agents/alphaavatar/agents/configs/plugins/: character_config.py  character_plugin_config.py  livekit_plugin_config.py  llm_config.py  llm_plugin_config.py  mcp_plugin_config.py  memory_config.py  memory_plugin_config.py  persona_config.py  persona_plugin_config.py  status_config.py  tools_config.py  tools_plugin_config.py  vision_config.py  vision_plugin_config.py  voice_config.py  voice_plugin_config.py
avatar-agents/alphaavatar/agents/entrypoints/: main.py  serve.py
avatar-agents/alphaavatar/agents/entrypoints/channels/: bootstrap.py  factory.py  registry.py
avatar-agents/alphaavatar/agents/entrypoints/io/: dispatcher.py  envelopes.py
avatar-agents/alphaavatar/agents/entrypoints/schema/: room_type.py  session_mode.py  session_type.py
avatar-agents/alphaavatar/agents/io/: dispatcher.py
avatar-agents/alphaavatar/agents/memory/: __init__.py  base.py  cache.py  watcher.py
avatar-agents/alphaavatar/agents/memory/enum/: memory_item.py  memory_type.py  runner_op.py
avatar-agents/alphaavatar/agents/memory/schema/: graph.py  memory_item.py
avatar-agents/alphaavatar/agents/persona/: __init__.py  base.py  cache.py  face.py  identifier.py  profiler.py  recognizer.py  speaker.py  watcher.py
avatar-agents/alphaavatar/agents/persona/enum/: runner_op.py  user_profile.py
avatar-agents/alphaavatar/agents/persona/schema/: face.py  user_profile.py
avatar-agents/alphaavatar/agents/providers/: __init__.py  gateway.py  registry.py  trace.py
avatar-agents/alphaavatar/agents/providers/embedding/: __init__.py  factory.py
avatar-agents/alphaavatar/agents/providers/enum/: __init__.py  provider_kind.py
avatar-agents/alphaavatar/agents/providers/llm/: __init__.py  factory.py
avatar-agents/alphaavatar/agents/providers/schema/: __init__.py  provider_result.py  task_config.py  trace_record.py  usage.py
avatar-agents/alphaavatar/agents/providers/usage/: __init__.py  anthropic.py  base.py  factory.py  google.py  openai.py  openrouter.py
avatar-agents/alphaavatar/agents/runtime/: __init__.py  context_runtime.py  session_runtime.py
avatar-agents/alphaavatar/agents/sessions/: character_session.py
avatar-agents/alphaavatar/agents/status/: __init__.py  base.py  callback.py  emitter.py
avatar-agents/alphaavatar/agents/status/enum/: __init__.py  status_priority.py  status_type.py  status_visibility.py
avatar-agents/alphaavatar/agents/status/schema/: __init__.py  status_event.py  status_policy.py
avatar-agents/alphaavatar/agents/template/: __init__.py  template.py
avatar-agents/alphaavatar/agents/template/prompts/: avatar_memory_prompts.py  avatar_system_prompts.py
avatar-agents/alphaavatar/agents/tools/: __init__.py  base.py  deepresearch_api.py  mcp_api.py  rag_api.py
avatar-agents/alphaavatar/agents/utils/: __init__.py  env_utils.py  file_utils.py  hash_utils.py  id_utils.py  op_utils.py  time_utils.py  vdb_utils.py
avatar-agents/alphaavatar/agents/utils/files/: op.py  user_dirs.py  work_dirs.py
avatar-agents/alphaavatar/agents/utils/vdb/: embedding.py  lancedb.py  qdrant.py
avatar-channels/avatar-channels-whatsapp/: README.md  pyproject.toml
avatar-channels/avatar-channels-whatsapp/drivers/baileys/: package.json  pnpm-lock.yaml  tsconfig.json
avatar-channels/avatar-channels-whatsapp/drivers/baileys/src/: baileys.ts
avatar-channels/avatar-channels-whatsapp/src/alphaavatar/channels/whatsapp/: __init__.py  core.py  dispatch.py  livekit_bridge.py  log.py  room_manager.py  schemas.py  settings.py  whitelist.py
avatar-plugins/avatar-plugins-memory/: README.md  pyproject.toml
avatar-plugins/avatar-plugins-memory/alphaavatar/plugins/memory/: __init__.py  mem0.py  mem0_client.py  memory_langchain.py  memory_markdown.py  memory_op.py  memory_prompts.py  memory_runtime.py
avatar-plugins/avatar-plugins-memory/alphaavatar/plugins/memory/graph/: __init__.py  graph_alias.py  graph_builder.py  graph_lookup.py  graph_store.py
avatar-plugins/avatar-plugins-memory/alphaavatar/plugins/memory/runner/: lancedb_runner.py  (+1 more)
avatar-plugins/avatar-plugins-persona/: README.md  pyproject.toml
avatar-plugins/avatar-plugins-persona/alphaavatar/plugins/persona/: __init__.py  face_cache.py  face_stream.py  fbank.py  log.py  models.py  profiler_details.py  profiler_langchain.py  profiler_op.py  profiler_runtime.py  speaker_profile.py  speaker_stream.py  version.py
(+111 files in other folders)
