[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alpha-avatar-agents"
dynamic = ["version"]
description = "A real-time interactive Omni Avatar Agent built on LiveKit."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.12"
keywords = ["omni", "realtime", "audio", "video", "llm", "agents", "AI"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "python-dotenv",
    "mcp>=1.10.0, <2",
    "omegaconf",
    "markdown",
    "weasyprint",
    "python-slugify",
    "livekit>=1.0.12,<2",
    "livekit-api>=1.0.4,<2",
    "livekit-protocol~=1.0",
    "livekit-blingfire~=1.0",
    "livekit-agents~=1.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-silero~=1.4",
    "livekit-plugins-turn-detector~=1.4",
]

[project.optional-dependencies]
openai = ["livekit-plugins-openai~=1.4", "langchain-openai"]
google = ["langchain-google-genai"]
anthropic = ["langchain-anthropic"]

[project.scripts]
alphaavatar = "alphaavatar.agents.entrypoints.main:main"

[project.urls]
Source = "https://github.com/AlphaAvatar/AlphaAvatar"


[tool.hatch.version]
path = "alphaavatar/agents/version.py"

[tool.hatch.build.targets.wheel]
packages = ["alphaavatar"]

[tool.hatch.build.targets.sdist]
include = ["alphaavatar", "README.md", "LICENSE"]
